--- a/views/index.hbs
+++ b/views/index.hbs
@@ -58,7 +58,7 @@
 
   <!-- Banner -->
     <div class="youplay-banner custombannerwhite banner-top big">
-      <div class="image" style="background-image: url('sources/img/bigbanner.jpg')">
+      <div class="image" style="background-image: url('sources/img/fondito.png')">
       </div>
 
       </div>
