--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,68 +1,10 @@
+<!-- Header -->
 {{> header}}
-
-  <div class="modal fade" id="login" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span>
-            </button>
-            <h2 class="modal-title" id="myModalLabel">LOG IN</h2>
-          </div>
-          <div class="modal-body">
-
-            <form>
-                <div class="youplay-input">
-                  <input type="text" name="login" placeholder="Login">
-                </div>
-                <div class="youplay-input">
-                  <input type="password" name="password" placeholder="Password">
-                </div>
-                <button class="btn btn-success db">Login</button>
-            </form>
-
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="modal fade" id="register" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-          <div class="modal-content">
-            <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span>
-              </button>
-              <h2 class="modal-title" id="myModalLabel">REGISTER</h2>
-            </div>
-            <div class="modal-body">
-  
-              <form>
-                  <div class="youplay-input">
-                    <input type="text" name="login" placeholder="Username">
-                  </div>
-                  <div class="youplay-input">
-                    <input type="password" name="password" placeholder="Password">
-                  </div>
-                  <div class="youplay-input">
-                      <input type="password" name="password" placeholder="Repeat password">
-                  </div>
-                  <div class="youplay-input">
-                      <input type="password" name="password" placeholder="Country">
-                  </div>
-                  <button class="btn btn-success db">Submit</button>
-              </form>
-  
-            </div>
-          </div>
-        </div>
-      </div>
-
+<!-- Header -->
+ 
   <!-- Banner -->
-    <div class="youplay-banner custombannerwhite banner-top big">
-      <div class="image" style="background-image: url('sources/img/fondito.png')">
-      </div>
-
-      </div>
-    <!-- /Banner -->
+    {{> banner}}
+  <!-- /Banner -->
 
     <div class="container youplay-content">
       <h1>WELCOME TO ZENON GAMES</h1>
@@ -110,23 +52,7 @@
         </div>
 
   <!-- Banner -->
-  <section class="youplay-banner custombannerblack banner-top youplay-banner-parallax">
-    <div class="image" style="background-image: url('sources/img/Inspire-logo.jpg')">
-    </div>
 
-    <div class="info">
-      <div>
-        <div class="container">
-          <h1>MEET INSPIRE</h1>
-          <em>Our brand new game</em>
-          <br>
-          <br>
-          <br>
-          <a class="btn btn-lg" href="inspire.html">Discover it</a>
-        </div>
-      </div>
-    </div>
-  </section>
   <!-- /Banner -->
 
   <!-- Recent news section-->
