--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -8,9 +8,9 @@
 
 
   <!-- Icon -->
-  <link rel="icon" type="image/png" href="assets/images/icon.png">
-  <!-- Google Fonts -->
+  <link rel="icon" type="image/png" href="sources/img/logo.png">
 
+  <!-- Google Fonts -->
   <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
 
   <!-- Bootstrap -->
@@ -36,6 +36,8 @@
   <!-- Youplay -->
 
   <link rel="stylesheet" type="text/css" href="assets/youplay/css/youplay.min.css" />
+
+  <link rel="icon" href="http://example.com/favicon.png">
 
   <!-- Custom Styles -->
   <link rel="stylesheet" type="text/css" href="sources/css/custom.css" />
@@ -97,3 +99,59 @@
       </div>
     </nav>
     <!-- /Navbar -->
+
+     <div class="modal fade" id="login" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span>
+            </button>
+            <h2 class="modal-title" id="myModalLabel">LOG IN</h2>
+          </div>
+          <div class="modal-body">
+
+            <form>
+                <div class="youplay-input">
+                  <input type="text" name="login" placeholder="Login">
+                </div>
+                <div class="youplay-input">
+                  <input type="password" name="password" placeholder="Password">
+                </div>
+                <button class="btn btn-success db">Login</button>
+            </form>
+
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="modal fade" id="register" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span>
+              </button>
+              <h2 class="modal-title" id="myModalLabel">REGISTER</h2>
+            </div>
+            <div class="modal-body">
+  
+              <form>
+                  <div class="youplay-input">
+                    <input type="text" name="login" placeholder="Username">
+                  </div>
+                  <div class="youplay-input">
+                    <input type="password" name="password" placeholder="Password">
+                  </div>
+                  <div class="youplay-input">
+                      <input type="password" name="password" placeholder="Repeat password">
+                  </div>
+                  <div class="youplay-input">
+                      <input type="password" name="password" placeholder="Country">
+                  </div>
+                  <button class="btn btn-success db">Submit</button>
+              </form>
+  
+            </div>
+          </div>
+        </div>
+      </div>
