--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -91,8 +91,8 @@
           </ul>
           <ul class="nav navbar-nav navbar-right">
               <li>
-                  <button type="button" class="btn button-navbar" data-toggle="modal" data-target="#login">Login</button>
-                  <button type="button" class="btn button-navbar" data-toggle="modal" data-target="#register">Register</button>
+                  <button type="button" class="btn button-navbar btn-primary" data-toggle="modal" data-target="#login">Login</button>
+                  <button type="button" class="btn button-navbar btn-primary" data-toggle="modal" data-target="#register">Register</button>
               </li>
           </ul>
         </div>
