Folder system amplified and FETCH requests working correctly, MongoDB implementation started

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -173,6 +173,9 @@
   <!-- Youplay -->
   <script type="text/javascript" src="assets/youplay/js/youplay.min.js"></script>
 
+  <script src="scripts/pcwLibrary.js"></script>
+  <script src="scripts/userRequester.js"></script>
+
   <!-- init youplay -->
   <script>
     if(typeof youplay !== 'undefined') {
