--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -43,7 +43,6 @@
   <link rel="stylesheet" type="text/css" href="sources/css/custom.css" />
   <!-- RTL (uncomment this to enable RTL support) -->
   <!-- <link rel="stylesheet" type="text/css" href="assets/youplay/css/youplay-rtl.css" /> -->
-
   <!-- Google Maps API -->
   <script src="https://maps.googleapis.com/maps/api/js"></script>
 </head>
@@ -135,7 +134,7 @@
             </div>
             <div class="modal-body">
   
-              <form>
+              <form id="registerUserForm">
                   <div class="youplay-input">
                     <input type="text" name="login" placeholder="Username">
                   </div>
@@ -143,12 +142,12 @@
                     <input type="password" name="password" placeholder="Password">
                   </div>
                   <div class="youplay-input">
-                      <input type="password" name="password" placeholder="Repeat password">
+                      <input type="password" name="rpassword" placeholder="Repeat password">
                   </div>
                   <div class="youplay-input">
-                      <input type="password" name="password" placeholder="Country">
+                      <input type="text" name="country" placeholder="Country">
                   </div>
-                  <button class="btn btn-success db">Submit</button>
+                  <button class="btn btn-success db" onclick=" return RegisterUser()">Submit</button>
               </form>
   
             </div>
