--- a/views/index.hbs
+++ b/views/index.hbs
@@ -24,7 +24,7 @@
           <div class="col-md-3 col-sm-6 ">
             <a class="feature angled-img" href="#">
               <div class="img">
-                <img src="sources/img/wwnf.jpg" alt="">
+                <img src="sources/img/wwnf.jpg" alt="" class="photosProjects">
                 <h3>We Will Not Fall</h3>
                 <small>PC Game - 2018</small>
               </div>
@@ -33,7 +33,7 @@
           <div class="col-md-3 col-sm-6 ">
               <a class="feature angled-img" href="#">
                 <div class="img">
-                  <img src="sources/img/Rookiethief.png" alt="">
+                  <img src="sources/img/Rookiethief.png" alt="" class="photosProjects">
                   <h3>The Rookie Thief</h3>
                   <small>Amstrad CPC 464 - 2018</small>
                 </div>
@@ -42,7 +42,7 @@
           <div class="col-md-3 col-sm-6 ">
               <a class="feature angled-img" href="#">
                 <div class="img">
-                  <img src="sources/img/Bringrgback.jpg" alt="">
+                  <img src="sources/img/Bringrgback.jpg" alt="" class="photosProjects">
                   <h3>Bring RGBack!</h3>
                   <small>Amstrad CPC 464 - 2018</small>
                 </div>
