--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -77,16 +77,16 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li class="">
-              <a href="/" role="button" aria-expanded="false">Home</a>
+              <a href="/" role="button" class="navbar-btns" aria-expanded="false">Home</a>
             </li>
             <li class="">
-              <a href="/inspire" role="button" aria-expanded="false">Inspire<span class="label">the game</span></a>
+              <a href="/inspire" role="button" class="navbar-btns" aria-expanded="false">Inspire<span class="label">the game</span></a>
             </li>
             <li class="">
-              <a href="/news" role="button" aria-expanded="false">Dev Blog<span class="label">recent news</span></a>
+              <a href="/news" role="button" class="navbar-btns" aria-expanded="false">Dev Blog<span class="label">recent news</span></a>
             </li>
             <li class="">
-              <a href="about.html" role="button" aria-expanded="false">About<span class="label">the team</span></a>
+              <a href="about.html" role="button" class="navbar-btns" aria-expanded="false">About<span class="label">the team</span></a>
             </li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
