--- a/views/partials/banner.hbs
+++ b/views/partials/banner.hbs
@@ -1,7 +1,6 @@
  <!-- Banner -->
     <div class="youplay-banner custombannerwhite banner-top big">
-      <div class="image" style="background-image: url('sources/img/fondito.png')">
-      </div>
+      <div class="image" style="background-image: url('sources/img/fondito.png')"></div>
         <div class="custom-btn">
             <a class="btn btn-lg btn-primary" href="/inspire">Discover it</a>
         </div>
