--- a/public/sources/css/custom.css
+++ b/public/sources/css/custom.css
@@ -85,3 +85,11 @@ footer .social .social-icons .social-icon>a i:after
     background: rgb(234, 177, 0);
     border:2px rgb(234, 177, 0); 
 }
+
+.alertmodal
+{
+    position: absolute;
+    margin-top: 100px;
+    width: 80%;
+    margin-left: 110px;
+}
