--- a/views/news.hbs
+++ b/views/news.hbs
@@ -65,7 +65,7 @@
             <!-- /News List -->
       
             <!-- Right Side -->
-            <div class="col-md-3">
+            <div class="col-md-3 properties12">
       
               <!-- Side Popular News -->
               <div class="side-block">
