--- a/views/inspire.hbs
+++ b/views/inspire.hbs
@@ -3,7 +3,7 @@
 
     <!-- Banner -->
     <div class="youplay-banner banner-top custombannerwhite banner-top big">
-    <div class="image" style="background-image: url('sources/img/fondito.png')">
+    <div class="image2" style="background-image: url('sources/img/fondo2.png')">
       </div>
     </div>
     <!-- /Banner -->
