--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -97,7 +97,7 @@
             </a>
           </li>
           <li>
-            <button type="button" class="btn button-navbar btn-primary" data-toggle="modal" data-target="#login" onclick="Logout();">Logout</button>
+            <button type="button" class="btn button-navbar btn-primary" onclick="Logout();">Logout</button>
           </li>
           </ul>
 
