--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -45,6 +45,7 @@
   <!-- <link rel="stylesheet" type="text/css" href="assets/youplay/css/youplay-rtl.css" /> -->
   <!-- Google Maps API -->
   <script src="https://maps.googleapis.com/maps/api/js"></script>
+  <script src="scripts/indexModifier.js"></script>
 </head>
 
 
@@ -89,27 +90,8 @@
             </li>
           </ul>
           
-          {{#if user}}
-          <ul class="nav navbar-nav navbar-right">
-          <li class="dropdown dropdown-hover">
-            <a href="#!" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
-                {{user}}<span class="label">welcome</span>
-            </a>
-          </li>
-          <li>
-            <button type="button" class="btn button-navbar btn-primary" onclick="Logout();">Logout</button>
-          </li>
-          </ul>
-
-          {{else}}
-          <ul class="nav navbar-nav navbar-right">
-              <li>
-                  <button type="button" class="btn button-navbar btn-primary" data-toggle="modal" data-target="#login">Login</button>
-                  <button type="button" class="btn button-navbar btn-primary" data-toggle="modal" data-target="#register">Register</button>
-              </li>
-          </ul>
-          {{/if}}
-        
+          <span id="userforms"></span>
+          <script>checkIfLoggedIn();</script>
         </div>
       </div>
     </nav>
