Minor bugs fixed with client-side views

--- a/views/news.hbs
+++ b/views/news.hbs
@@ -183,6 +183,8 @@
   <!-- Youplay -->
   <script type="text/javascript" src="../assets/youplay/js/youplay.min.js"></script>
 
+  {{>customscripts}}
+
   <!-- init youplay -->
   <script>
     if(typeof youplay !== 'undefined') {
