--- a/views/index.hbs
+++ b/views/index.hbs
@@ -174,8 +174,7 @@
   <!-- Youplay -->
   <script type="text/javascript" src="assets/youplay/js/youplay.min.js"></script>
 
-  <script src="scripts/pcwLibrary.js"></script>
-  <script src="scripts/userRequester.js"></script>
+  {{>customscripts}}
 
   <!-- init youplay -->
   <script>
