Updated client library for requests and user data management

--- a/views/partials/customscripts.hbs
+++ b/views/partials/customscripts.hbs
@@ -1,2 +1,2 @@
-  <script src="scripts/pcwLibrary.js"></script>
+  <script src="scripts/OrionJSFrontEnd.js"></script>
   <script src="scripts/userRequester.js"></script>
